fixed name font, added new font, fixed spacing, rearrange title.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -72,30 +72,17 @@
   width: 59vw;
 }
 
-.Khang-text {
+.Name-text {
+  color: #e6e3e3;
+  padding-top: 5%;
+  font-family: 'DM Serif Display', serif;
+  text-Align: center;
   margin: 0;
   /* background-color: pink; */
-  font-size: 10vw;
-}
+  font-size: 25vb;
+  line-height: 90%;
 
-.Tran-text{
-  text-align: right;
-  margin: 0;
-  padding-right: 16%;
-  font-size: 10vw;
-}
-
-.Bio-text{
-  padding-top: 1%;
-  /* color: #B4B5B7; */
-  color: #e6e3e3;
-  margin: 0;
-  font-size: 3.6vb;
-  font-family: 'DM Serif Display', serif;
-}
-
-.Gradient-effect{
-  font-family: 'Montserrat', sans-serif;
+  /* gradient animation stuff */
   background-image: linear-gradient(90deg, #3673CF, #4636CF, #36C0CF);
   background-clip: border-box;
   -webkit-text-fill-color: transparent;
@@ -109,7 +96,33 @@
   100%{
     background-color: 0%;
   }
+  }
+
+
+.Bio-text{
+  padding-top: 6%;
+  /* color: #B4B5B7; */
+  color: #e6e3e3;
+  margin: 0;
+  font-size: 2.9vb;
+  font-family: 'Montserrat', sans-serif;
 }
+
+/* .Gradient-effect{
+  background-image: linear-gradient(90deg, #3673CF, #4636CF, #36C0CF);
+  background-clip: border-box;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 1s linear infinite;
+}
+@keyframes animate{
+  0%{
+    background-position: 0%;
+  }
+  100%{
+    background-color: 0%;
+  }
+} */
 
 .HorizontalAlign-picture {
   display: flex;
